<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search / will display always -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <!-- Location Found -->
    <item android:id="@+id/action_location_found"
        android:icon="@drawable/ic_action_location_found"
        android:title="@string/action_location_found"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:showAsAction="ifRoom"/>

    <!-- Refresh -->
    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:showAsAction="ifRoom"/>

    <!-- Help -->
    <item android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/action_help"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:showAsAction="never"/>

    <!-- Check updates -->
    <item android:id="@+id/action_check_updates"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_check_updates"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:showAsAction="never"/>
</menu>